removed sidebar overlay on mobile, this prevented elements on the website to be interactive

--- a/src/components/ui/sidebar/sidebar.module.css
+++ b/src/components/ui/sidebar/sidebar.module.css
@@ -37,15 +37,7 @@
 
   .sidebar::before,
   .sidebar::after {
-    position: fixed;
-    left: 0;
-    top: 0;
-    content: "";
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-
-    opacity: 20%;
+    display: none;
   }
 
   .sidebar::before {
